// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariantButton 0 overview snapshot 1`] = `
<button
  disabled={false}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
      "flexDirection": "row",
      "fontSize": 12,
      "padding": "10px 20px",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Gisselle Mohr
  </div>
</button>
`;

exports[`VariantButton 1 overview snapshot 1`] = `
<button
  disabled={false}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
      "flexDirection": "row",
      "fontSize": 22,
      "padding": "10px 20px",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Barbara Brakus
  </div>
</button>
`;

exports[`VariantButton 2 overview snapshot 1`] = `
<button
  disabled={false}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
      "flexDirection": "row",
      "fontSize": 22,
      "padding": "10px 20px",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Adah Nolan
  </div>
</button>
`;

exports[`VariantButton 3 overview snapshot 1`] = `
<button
  disabled={false}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
      "flexDirection": "row",
      "fontSize": 20,
      "padding": "10px 20px",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Jon Will
  </div>
</button>
`;

exports[`VariantButton 4 overview snapshot 1`] = `
<button
  disabled={false}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
      "flexDirection": "row",
      "fontSize": 16,
      "padding": "10px 20px",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Mr. Dulce Rice
  </div>
</button>
`;

exports[`VariantButton 5 overview snapshot 1`] = `
<button
  disabled={false}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
      "flexDirection": "row",
      "fontSize": 29,
      "padding": "10px 20px",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Mrs. Jermey Jacobson
  </div>
</button>
`;

exports[`VariantButton 6 overview snapshot 1`] = `
<button
  disabled={false}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
      "flexDirection": "row",
      "fontSize": 16,
      "padding": "10px 20px",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Clark Hickle
  </div>
</button>
`;

exports[`VariantButton 7 overview snapshot 1`] = `
<button
  disabled={false}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
      "flexDirection": "row",
      "fontSize": 27,
      "padding": "10px 20px",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Ibrahim Purdy
  </div>
</button>
`;

exports[`VariantButton 8 overview snapshot 1`] = `
<button
  disabled={false}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
      "flexDirection": "row",
      "fontSize": 16,
      "padding": "10px 20px",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Jody Legros
  </div>
</button>
`;

exports[`VariantButton 9 overview snapshot 1`] = `
<button
  disabled={false}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
      "flexDirection": "row",
      "fontSize": 12,
      "padding": "10px 20px",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Ford Kunze
  </div>
</button>
`;
